--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Elite Page</title>
+    <title>QR Code Page</title>
     <style>
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -46,6 +46,7 @@
             position: relative;
             animation: fadeIn 1.5s ease-in-out;
             overflow: hidden;
+            font-family: 'Arial', sans-serif;
         }
 
         .background-container {
@@ -75,10 +76,8 @@
         }
 
         .qr-container {
-            background: rgba(255, 255, 255, 0.4);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
             padding: 20px;
             text-align: center;
             animation: slideUp 1s ease-in-out;
@@ -90,6 +89,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         .qr-container img {
@@ -105,13 +107,14 @@
         }
 
         .refresh-button {
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.5);
             color: #000;
             border: none;
             padding: 10px;
             border-radius: 5px;
             cursor: pointer;
             margin-top: 10px;
+            backdrop-filter: blur(5px);
         }
 
         .message {
