--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </div>
     <div class="qr-container">
         <img id="qr-code" src="https://qr-ov2o.onrender.com/" alt="QR Code">
-        <p>Scan the QR to get your session ID for elite md</p>
+        <p>Scan the QR to get your session ID for elite md <br><bold></bold>wait 30 </bold></p>
         <button class="refresh-button" onclick="reloadQRCode()">Refresh QR Code</button>
     </div>
     <div class="message" id="message">
