--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
     </div>
     <div class="qr-container">
         <img id="qr-code" src="https://qr-ov2o.onrender.com/" alt="QR Code">
-        <p>Scan the QR to get your session ID for 𝗘𝗟𝗜𝗧𝗘-𝗠𝗗 </p>
-        <h3>Wait 30 seconds</h3>
+        <p>Scan the QR to get your session ID for 𝗘𝗟𝗜𝗧𝗘-𝗠𝗗<br>𝗪𝗮𝗶𝘁 30 𝗦𝗲𝗰𝗼𝗻𝗱𝘀👍 </p>
         <button class="refresh-button" onclick="reloadQRCode()">Refresh QR Code</button>
     </div>
     <div class="message" id="message">
